@@ -2,6 +2,7 @@
 no codename
 ========
 
+051011: CUIDialog::renderBegin()/renderEnd() added.
 051001: Effects are checked for valid/missing state assignments (as
 		required for the state restore system to work). For example,
 		if you don't set SrcBlend when turning on alpha blending,
